# FileManipulationToolProd

./: .gitignore  DEVELOPER.md  Dockerfile  README.md  install_filetool.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
debian/: changelog  control
emailing/: emails_list.json
src/file.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/filetool/: cli.py  exceptions.py  file_operations.py
tests/integration/: test_post_install.py
tests/unit/: test_cli.py  test_file_operations.py
